--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Welcome to Firebase Hosting</title>
+  <title>Chart The Boards</title>
 
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/6.3.5/firebase-app.js"></script>
